--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 
 .head {
 	background:  hsl(19, 76%, 88%);
-	width: 300px;
+	width: 250px;
 	height: 340px;
 	border-radius: 70% 70% 100% 100%;
 	display: flex;
@@ -22,7 +22,7 @@ body {
 	align-items: center;
 }
 
-.eyes, .brows {
+.eyes, .brows, .blushes {
 	position: absolute;
 	width: 195px;
 	display: flex;
@@ -30,28 +30,28 @@ body {
 }
 
 .eye {
-	background: white;
-	height: 40px;
+	/* background: white; */
+	height: 60px;
 	width: 65px;
 	border-radius: 100%;
-	border-top:  3px solid hsl(19, 46%, 68%);
-	border-bottom:  3px solid hsl(19, 46%, 68%);
+	border-top:  5px solid  #333;
+	/* border-bottom:  3px solid hsl(19, 46%, 68%); */
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	overflow: hidden;
+	/* overflow: hidden; */
 	position: relative;
 }
 
 .eye::before {
 	content: '';
 	position: absolute;
-	width: 41px;	
-	height: 41px;	
-	background-color: hsl(78, 10%, 42%);
+	width: 50px;	
+	height: 60px;	
+	background-color: #333;
 	border-radius: 100%;
-	margin-left: 10px;
-	margin-bottom: 5px;
+	margin-left: 18px;
+	margin-bottom: 0px;
 }
 
 .eye::after {
@@ -59,10 +59,10 @@ body {
 	position: absolute;
 	width: 15px;	
 	height: 15px;	
-	background-color: #333;
+	background-color: white;
 	border-radius: 100%;
-	margin-left: 15px;
-	margin-bottom: 7px;
+	margin-left: 35px;
+	margin-top: 25px;
 }
 
 .brow {
@@ -70,26 +70,35 @@ body {
 	height: 32px;
 	border-top:  10px solid hsl(27, 33%, 28%);
 	border-radius: 100%;
-	margin-bottom: 35px;
+	margin-bottom: 75px;
+}
+
+.blush {
+	width: 30px;
+	height: 10px;
+	margin: 0 20px 0;
+	border-radius: 100%;
+	background-color: hsl(298, 40%, 74%);
+	margin-top: 120px;
 }
 
 .nose {
 	position: absolute;
-	width: 40px;
-	height: 30px;
+	width: 5px;
+	height: 10px;
 	border:  4px solid hsl(19, 46%, 68%);
 	border-radius: 0 0 100% 100%;
 	border-top: none;
-	margin-top: 100px;
+	margin-top: 120px;
 }
 
 .mouth {
 	position: absolute;
-	width: 100px;
-	height: 40px;
+	width: 30px;
+	height: 0px;
 	background-color: white;
 	margin-top: 225px;
-	border-radius: 20% 20% 100% 100%;
+	border-radius: 0% 0% 100% 100%;
 	border: 4px solid hsl(19, 46%, 68%);
   border-left-width: 1px;
 	border-right-width: 1px;
@@ -99,7 +108,7 @@ body {
 .ears {
 	z-index: -1;
 	position: absolute;
-	width: 340px;
+	width: 290px;
 	display: flex;
 	justify-content: space-between;
 }
@@ -118,11 +127,49 @@ body {
 .hair {
 	position: absolute;
 	width: 300px;
-	height: 125px;
-	background: hsl(27, 33%, 28%);
+	display: flex;
 	margin-bottom: 300px;
-	border-radius: 50% 100% 0 0;
 }
+
+.hair-right {
+	flex: 2;
+	height: 200px;
+	border-radius: 100%;	
+	background: hsl(27, 33%, 28%);
+}
+
+.hair-right::before {
+	content: '';
+	position: absolute;
+	background-color: hsl(27, 33%, 28%);
+	width: 120px;
+	height: 120px;
+	border-radius: 10% 100% 100% 100%;
+	margin-top: 100px;
+	margin-left: -50px;
+	transform: rotate(3deg);
+}
+
+.hair-left {
+	flex: 1;
+	height: 150px;
+	margin-top: 50px;
+	border-radius: 70% 100% 1% 100%;
+	background: hsl(27, 33%, 28%);
+}
+
+.hair-left::before {
+	content: '';
+	position: absolute;
+	width: 120px;
+	height: 80px;
+	margin-left: -55px;
+	margin-top: -15px;
+	border-radius: 95% 100% 0% 0%;
+	background: hsl(27, 33%, 28%);
+}
+
+/* 
 
 .hair::before,
 .hair::after {
@@ -156,4 +203,4 @@ body {
 	left: initial;
 	transform: rotate(135deg);
 	right: 5px;
-}
+} */
